tests/sources/should-compile/comments.c
void main(){
    int x = 10;
    // float x = 5.5;
    x = 10 / 2;
}