tests/sources/should-not-compile/repeat-no-body.c
int x = 10;
int y = 0;

repeat until (y > 10);